fullSandbox11072023/force-app/main/default/objects/Label_Translation__c/Label_Translation__c.object-meta.xml
<CustomObject>
    <description>Helps with translations for languages not fully supported in SF.</description>
    <label>Label Translation</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Label Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>