fullSandbox11072023/force-app/main/default/objects/Label_Translation__c/fields/Label_Name__c.field-meta.xml
<CustomField>
    <fullName>Label_Name__c</fullName>
    <description>Name of label (example would be the API name of a custom label EMEA_Quotation).</description>
    <inlineHelpText>Name of label (example would be the API name of a custom label EMEA_Quotation).</inlineHelpText>
    <label>Label Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>