fullSandbox11072023/force-app/main/default/objects/Label_Translation__c/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <description>Language code example en_US, cz.</description>
    <inlineHelpText>Language code example en_US, cz.</inlineHelpText>
    <label>Language Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>