fullSandbox11072023/force-app/main/default/objects/Label_Translation__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <description>Example of sales orgs (US60, DE10, CA10).</description>
    <inlineHelpText>Example of sales orgs (US60, DE10, CA10).</inlineHelpText>
    <label>Sales Org</label>
    <length>4</length>
    <type>Text</type>
</CustomField>