fullSandbox11072023/force-app/main/default/objects/Label_Translation__c/fields/Sales_Org_Key__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Key__c</fullName>
    <description>Sales Org Key is a combination of Sales Org and Distribution Channel.  Examplea of sales org key (US6010, DE1010, CA1010).</description>
    <inlineHelpText>Sales Org Key is a combination of Sales Org and Distribution Channel.  Examplea of sales org key (US6010, DE1010, CA1010).</inlineHelpText>
    <label>Sales Org Key</label>
    <length>6</length>
    <type>Text</type>
</CustomField>