fullSandbox11072023/force-app/main/default/objects/Label_Translation__c/fields/Translated_Value__c.field-meta.xml
<CustomField>
    <fullName>Translated_Value__c</fullName>
    <description>Put translated value here (example EMEA Quotation in Czech is Cenová nabídka).</description>
    <inlineHelpText>Put translated value here (example EMEA Quotation in Czech is Cenová nabídka).</inlineHelpText>
    <label>Translated Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>